Fix dropdown menu on smaller screen.

--- a/static/resourced-master/css/dashboard.css
+++ b/static/resourced-master/css/dashboard.css
@@ -11,6 +11,10 @@ select {
     padding: 1px 0;
 }
 
+.dropdown-menu>li>a {
+    padding: 0 28px 0 16px;
+}
+
 .bootstrap-switch {
     border: none;
 }
@@ -325,6 +329,20 @@ select {
         margin-top: 0;
         margin-bottom: 0;
     }
+
+    .navbar-nav .open .dropdown-menu {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        z-index: 4000;
+        text-align: left;
+        background-color: #4e5d6c;
+    }
+
+    .navbar-nav .open .dropdown-menu>li>a {
+        padding: 0 28px 0 16px;
+    }
+
     .dropdown-toggle, .dropdown-menu {
         text-align: right;
     }
@@ -332,6 +350,7 @@ select {
         margin: 0;
     }
 }
+
 @media(max-width:650px) {
     .graph-search-input {
         display: none;
